RMA view handler, routes and services
