# http/router/openapi.yaml
@@ -544,6 +544,44 @@ paths:
               schema:
                 $ref: '#/components/schemas/HtrespResponse'
           description: OK
+  /v1/main/inventory/return_merchandise_authorization_view:
+    get:
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HtrespResponse'
+          description: OK
+  /v1/main/inventory/return_merchandise_authorization_view/{id}:
+    get:
+      parameters:
+      - in: path
+        name: id
+        required: true
+        schema:
+          type: integer
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HtrespResponse'
+          description: OK
+  /v1/main/inventory/return_merchandise_authorization_view/search:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/DtoSearchReturnMerchandiseAuthorizationDTO'
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HtrespResponse'
+          description: OK
   /v1/main/inventory/stock_count_sheet:
     get:
       responses:
@@ -2349,7 +2387,7 @@ components:
           type: string
         receipient_id:
           type: integer
-        total_value:
+        total_value_gen:
           type: number
         updated_at:
           format: date-time
@@ -2456,12 +2494,16 @@ components:
           type: string
         id:
           type: integer
+        notes:
+          type: string
+        received_by:
+          type: integer
         rma_date:
           format: date-time
           type: string
         rma_number:
           type: string
-        total_value:
+        total_value_gen:
           type: number
         updated_at:
           format: date-time
@@ -2483,6 +2525,8 @@ components:
           type: number
         rma_id:
           type: integer
+        total_value_gen:
+          type: number
         unit_value:
           type: number
         updated_at:
